# Theorafile-cs

./: .gitignore  .gitmodules  README.md  Theorafile.cs  Theorafile.props  Theorafile.sln  library.sh
.github/workflows/: bindgen.yml
bindgen/: ast_linux.json  ast_osx.json  ast_win.json  cs.json
src/c/production/Theorafile/: CMakeLists.txt
src/c/production/Theorafile/include/: _Theorafile.h
src/c/production/Theorafile/src/: _Theorafile.c
src/cs/production/Theorafile/: Theorafile.Extensions.cs  Theorafile.csproj
